# waterland

./: Cargo.toml  main.rs  main.zig  watering_logic.ino
